# UNIVR_CGPROJ

./: .gitignore  .gitmodules  .yamllint  CMakeLists.txt  Dockerfile  ESERCIZI.md  Integrazione.md  README.md  SHADOW_MAPPING.md
.github/workflows/: pdf-release.yml  release-build.yml
code/: Animation.cpp  Animation.hpp  Armature.cpp  Armature.hpp  Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  OpenGL.cpp  OpenGL.hpp  Pipeline.cpp  Pipeline.hpp  Program.cpp  Program.hpp  RenderQuad.cpp  RenderQuad.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  SkeletonTree.cpp  SkeletonTree.hpp  Texture.cpp  Texture.hpp  main.cpp  settings.hpp
code/Camera/: Camera.cpp  Camera.hpp  MovableCamera.cpp  MovableCamera.hpp  OrthoCamera.cpp  OrthoCamera.hpp  OrthoSpectatorCamera.cpp  OrthoSpectatorCamera.hpp  ProjectionCamera.cpp  ProjectionCamera.hpp  RotativeCamera.cpp  RotativeCamera.hpp  SpectatorCamera.cpp  SpectatorCamera.hpp
code/Light/: AmbientLight.cpp  AmbientLight.hpp  ConeLight.cpp  ConeLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp
code/Pipelines/: ShadowedPipeline.cpp  ShadowedPipeline.hpp  UnshadowedPipeline.cpp  UnshadowedPipeline.hpp
esercizi/: esercizio01.cpp  esercizio02.cpp  esercizio03.cpp  esercizio04.cpp  esercizio05.cpp  esercizio06.cpp  esercizio07.cpp  esercizio08.cpp  esercizio09.cpp  esercizio10.cpp  esercizio11.cpp  esercizio12.cpp  esercizio13.cpp  esercizio14.cpp  esercizio15.cpp  esercizio16.cpp  esercizio17.cpp  esercizio18.cpp  esercizio19.cpp  esercizio20.cpp  esercizio21.cpp  esercizio22.cpp  esercizio23.cpp  esercizio24.cpp  esercizio25.cpp  esercizio26.cpp  esercizio27.cpp  esercizio28.cpp  esercizio29.cpp  esercizio30.cpp  esercizio31.cpp  esercizio32.cpp  esercizio33.cpp  esercizio34.cpp  esercizio35.cpp  esercizio36.cpp  esercizio37.cpp  esercizio38.cpp  esercizio39.cpp  esercizio40.cpp  (+16 more)
include/dds_loader/: CMakeLists.txt  dds_header.cpp  dds_header.hpp  dds_loader.cpp  dds_loader.hpp
include/glad/: glad.c  glad.h
scripts/: embed_spirv.cmake  embed_text.cmake  install-glslang.ps1
shaders/: ambient_lighting.frag  animate.comp  animate_bind_pose.comp  cone_lighting.frag  depth_only.frag  depth_only.vert  directional_lighting.frag  mesh.frag  mesh.vert  post.frag  quad.vert  ssao.frag  ssao_blur.frag  tone_mapping.frag  unshadowed.frag  unshadowed.geom  unshadowed.vert  unshadowed_directional_lighting.frag
